[project]
name = "racing-kingdom-com"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "deep-translator>=1.11.4",
    "google-play-scraper>=1.2.7",
    "googletrans>=4.0.2",
    "itunes-app-scraper-dmi>=0.9.6",
    "langdetect>=1.0.9",
    "matplotlib>=3.9.4",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "streamlit>=1.45.1",
    "textblob>=0.19.0",
    "transformers>=4.52.4",
    "watchdog>=6.0.0",
    "wordcloud>=1.9.4",
]
